In Progress: Pickling pitching stats

--- a/bin/modelling/model_one.ipynb
+++ b/bin/modelling/model_one.ipynb
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "# Fetch the players and pitchers from the game.\n",
-    "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v1')\n",
+    "data_locs = Path(r\"C:\\Users\\micha\\Documents\\GitHub\\BaseballAnalytics\\source_data\\model_data\\model_v1\")\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
     "batters_pickle = 'game_players.pickle'\n",
     "offensive_feat_pickle = 'raw_offensive_features.pickle'\n",
