--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -96,7 +96,7 @@
    ],
    "source": [
     "# Fetch the players, pitchers, and offensive features from all the games.\n",
-    "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v2')\n",
+    "data_locs = Path(r\"C:\\Users\\micha\\Documents\\GitHub\\BaseballAnalytics\\source_data\\model_data\\model_v2\")\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
     "all_pitcher = qu_vTwo.get_pitchers_in_all_games(data_locs / pitchers_pickle)\n",
     "qu_vTwo.unpack_pitchers(all_pitcher)"
@@ -104,105 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### AS OF NOW: RELIEF PITCHERS WILL ONLY be represented on one side of the game... we need both.\n",
-    "from re import search\n",
-    "\n",
-    "def process_game(game_events):\n",
-    "\n",
-    "    \"\"\"Function Description: Process a game by capturing all the pitchers who participated for the team.\n",
-    "    Function Parameters: game_events (The events related to the specific game.)\n",
-    "    Function Throws: Nothing\n",
-    "    Function Returns: A dictionary formatted like such. {pitcher_name : [num_instances, apearance_in_game]}\"\"\"\n",
-    "\n",
-    "    game_events.sort(key=lambda x: int(search(r'\\d+', x[1][:3]).group()))      # Sort the string by the leading numbers of each id.\n",
-    "    game_profile = {}\n",
-    "    num_instance = 1\n",
-    "    for event in game_events:\n",
-    "        pitcher_name = event[0]\n",
-    "        if pitcher_name not in game_profile:                                   # If a new pitcher is observed, add it to the dictionary.\n",
-    "            game_profile[pitcher_name] = [1, num_instance]\n",
-    "            num_instance += 1\n",
-    "        else:\n",
-    "            game_profile[pitcher_name][0] += 1\n",
-    "    return game_profile \n",
-    "\n",
-    "def tie_relievers_to_games(relief_games, relief_profile, games, team):\n",
-    "\n",
-    "    \"\"\"Function Description: Prepare the data in which it can be shipped to the model.\n",
-    "    Function Parameters: relief_games (The existing dictionary containing the relief pitchers.)\n",
-    "        relief_profile (The final relief pitchers to be appended to the model.), \n",
-    "        games (The games that was used within the model.), \n",
-    "        team (The team that contains the relief pitchers.)\n",
-    "    Function Throws: Nothing\n",
-    "    Function Returns: A dictionary containing the games and the pitchers who participated. {game_id : [relief_pitchers]}\"\"\"\n",
-    "\n",
-    "    for game in games:\n",
-    "        if game[0] not in relief_games:\n",
-    "            relief_games[game[0]] = {team : relief_profile}\n",
-    "        else:\n",
-    "            relief_games[game[0]][team] = relief_profile\n",
-    "    return relief_games\n",
-    "\n",
-    "def process_year(year_games, relief_games, team, window_size=40):\n",
-    "\n",
-    "    \"\"\"Function Description: Process a year of players compiling all the rosters into their respective windows.\n",
-    "    Function Parameters: year_games (The dictionary containing all the games and their events), \n",
-    "        team (The team that contains the relief pitchers.)\n",
-    "        window_size (The size of the window to consolidate all the players.)\n",
-    "    Function Throws: Nothing\n",
-    "    Function Returns: A dictionary containing the games and the expected roster. {game_id : {pitcher_one, pitcher_two, ..., pitcher_n}}\"\"\"\n",
-    "\n",
-    "    agg_pitchers = [[game_id, qu_vTwo.process_game(year_games[game_id])] for game_id in year_games]\n",
-    "    agg_pitchers.sort(key=lambda x: x[0][3:])        # Sort the string by the ending game digits.\n",
-    "    window_min = 0\n",
-    "    window_max = window_size\n",
-    "    while window_max <= len(year_games):             # Find the pitchers on the roster within the desired time frame.\n",
-    "        if (162 - window_max) < 20:                  # Just add the final games as to not create a small window.\n",
-    "            window_max = len(year_games)\n",
-    "        starting_pitchers, relief_pitchers = qu_vTwo.get_pitchers_in_window(agg_pitchers[window_min:window_max])\n",
-    "        relief_pitchers = qu_vTwo.get_unique_relief_pitchers(starting_pitchers, relief_pitchers)\n",
-    "        tie_relievers_to_games(relief_games, relief_pitchers, agg_pitchers[window_min:window_max], team)\n",
-    "        window_min = window_max\n",
-    "        window_max += window_size                    # We will eventually get out of the loop with these increments.\n",
-    "    \n",
-    "def get_relief_pitchers(pitchers, window_size=40):\n",
-    "\n",
-    "    \"\"\"# Function Description: Retrieve all the pitchers who participated on the teams starting lineup.\n",
-    "        The function will all correct for the fewest number of players to appear in the games. For instance, \n",
-    "        if only three relievers participated in the last n games, then all profiles will contain the top three most prevelant relievers.\n",
-    "    # Function Parameters: pitchers (The dictionary containing all the pitchers.), \n",
-    "    #    window_size (The pitchers on the roster within the specified timeframe.)\n",
-    "    # Function Throws: Nothing\n",
-    "    # Function Returns: A dictionary containing the pitcher names within the specified time frame.\"\"\"\n",
-    "\n",
-    "    relief_games = {}\n",
-    "    for team in pitchers:\n",
-    "        for year in pitchers[team]:\n",
-    "            process_year(pitchers[team][year], relief_games, team, window_size)\n",
-    "    num_relievers = []\n",
-    "    for game in relief_games:                    # Find the number of relievers in all window sizes.\n",
-    "        for team in relief_games[game]:\n",
-    "            if len(relief_games[game][team]) not in num_relievers:\n",
-    "                num_relievers.append(len(relief_games[game][team]))\n",
-    "    num_relievers = min(num_relievers)\n",
-    "    print(\"The number of relievers to contian: {}\".format(num_relievers))\n",
-    "    new_relief_pitchers = {}                        # Ensure all relievers in the games are the same.\n",
-    "    for game in relief_games:\n",
-    "        for team in relief_games[game]:\n",
-    "            if game not in new_relief_pitchers:\n",
-    "                new_relief_pitchers[game] = {team : relief_games[game][team][:num_relievers]}\n",
-    "            else:\n",
-    "                new_relief_pitchers[game][team] = relief_games[game][team][:num_relievers]\n",
-    "    return new_relief_pitchers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -346,29 +248,37 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "{'langm001': [26, 1], 'jamem001': [5, 2], 'mcelc001': [5, 3], 'perct001': [8, 4], 'harrp001': [2, 5]}\n"
+     "text": "The number of relievers to contian: 3\nGames accounted for: 69649\n{'ANA': ['may-d002', 'perct001', 'jamem001'], 'BOS': ['henrb001', 'mahop001', 'sloch001']}\n"
     }
    ],
    "source": [
-    "# Gather all the relief pitchers.\n",
-    "#relief_pitchers = get_relief_pitchers(all_pitcher, 20)\n",
-    "print(process_game(all_pitcher['ANA'][1997]['ANA199704020']))"
+    "# Gather all the relief pitchers. -- POSSIBLE EXCEPTION (NOT ALL GAMES INCLUDED, GAMES MAY BE MISSING DUE TO COMPLETE GAMES)\n",
+    "relief_pitchers = qu_vTwo.get_relief_pitchers(all_pitcher, 25)\n",
+    "print(\"Games accounted for: {}\".format(len(relief_pitchers)))\n",
+    "for game in relief_pitchers:\n",
+    "    print(relief_pitchers[game])\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "['langm001', '0ANA199704020']\n['gordt001', '5ANA199704020']\n"
+     "text": "Games accounted for: 70101\nANA199704020\n{'ANA': 'langm001', 'BOS': 'gordt001'}\n"
     }
    ],
    "source": [
-    "print(all_pitcher['ANA'][1997]['ANA199704020'][0])\n",
-    "print(all_pitcher['BOS'][1997]['ANA199704020'][0])"
+    "# Gather all the starting pitchers.\n",
+    "starting_pitchers = qu_vTwo.get_starting_pitchers(all_pitcher)\n",
+    "print(\"Games accounted for: {}\".format(len(starting_pitchers)))\n",
+    "for game in starting_pitchers:\n",
+    "    print(game)\n",
+    "    print(starting_pitchers[game])\n",
+    "    break"
    ]
   },
   {
@@ -378,7 +288,7 @@
    "outputs": [],
    "source": [
     "batters_pickle = 'game_players.pickle'\n",
-    "all_batters = qu.get_batters_in_all_games_vOne(data_locs / batters_pickle)"
+    "all_batters = qu_vTwo.get_batters(data_locs / batters_pickle)"
    ]
   },
   {
