In Progress: Consildating all the features. This was done in the previous model; however, the new consilidation has to incorporate relief pitchers

--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -36,6 +36,7 @@
    "outputs": [],
    "source": [
     "# Connect to the database.\n",
+    "data_locs = Path(r\"C:\\Users\\micha\\Documents\\GitHub\\BaseballAnalytics\\source_data\\model_data\\model_v2\")      # The location of the past queries.\n",
     "conn = connect(host=\"localhost\", user=\"root\", passwd=\"praquplDop#odlg73h?c\", db=\"baseball_stats_db\")\n",
     "qu_vTwo = Qu_VTwo(conn)\n",
     "qu = Qu(conn)"
@@ -64,39 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[['LAN199005020', 0],\n ['MON199005020', 1],\n ['NYA199005020', 1],\n ['NYN199005020', 0],\n ['PHI199005020', 0]]"
+      "text/plain": "[['LAN199005020', 0],\n ['MON199005020', 1],\n ['NYA199005020', 1],\n ['NYN199005020', 0]]"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 13
     }
    ],
    "source": [
     "# Retrieve only the game ids and their outcomes for modelling purposes. In addition, remove the first 200 games from the model to incur some historic data.\n",
-    "game_ids = [[game_id[0], game_id[8]] for game_id in game_outcomes]\n",
-    "game_ids = game_ids[200:]                                   \n",
-    "game_ids[0:5]"
+    "game_ids = [[game_id[0], game_id[8]] for game_id in game_outcomes[200:]]\n",
+    "game_ids[:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "An Event ['langm001', '0ANA199704020']\nNum Events 46\nNum Games 162\nNum Years 23\nNum Teams 33\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fetch the players, pitchers, and offensive features from all the games.\n",
-    "data_locs = Path(r\"C:\\Users\\micha\\Documents\\GitHub\\BaseballAnalytics\\source_data\\model_data\\model_v2\")\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
     "all_pitcher = qu_vTwo.get_pitchers_in_all_games(data_locs / pitchers_pickle)\n",
     "qu_vTwo.unpack_pitchers(all_pitcher)"
@@ -104,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -244,33 +237,22 @@
      "outputPrepend"
     ]
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "The number of relievers to contian: 3\nGames accounted for: 69649\n{'ANA': ['may-d002', 'perct001', 'jamem001'], 'BOS': ['henrb001', 'mahop001', 'sloch001']}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Gather all the relief pitchers. -- POSSIBLE EXCEPTION (NOT ALL GAMES INCLUDED, GAMES MAY BE MISSING DUE TO COMPLETE GAMES)\n",
     "relief_pitchers = qu_vTwo.get_relief_pitchers(all_pitcher, 25)\n",
     "print(\"Games accounted for: {}\".format(len(relief_pitchers)))\n",
     "for game in relief_pitchers:\n",
+    "    print(game)\n",
     "    print(relief_pitchers[game])\n",
     "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Games accounted for: 70101\nANA199704020\n{'ANA': 'langm001', 'BOS': 'gordt001'}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Gather all the starting pitchers.\n",
     "starting_pitchers = qu_vTwo.get_starting_pitchers(all_pitcher)\n",
@@ -287,8 +269,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batters_pickle = 'game_players.pickle'\n",
-    "all_batters = qu_vTwo.get_batters(data_locs / batters_pickle)"
+    "# Gather all the pitching features from the database.\n",
+    "pitching_feat_pickle = 'raw_pitching_features.pickle'\n",
+    "pitching_features = qu_vTwo.get_all_pitching_features(data_locs / pitching_feat_pickle)\n",
+    "for player_id in pitching_features:\n",
+    "    print(player_id)\n",
+    "    for i, game in enumerate(pitching_features[player_id]):\n",
+    "        print(game)\n",
+    "        if i > 1: break\n",
+    "    break"
    ]
   },
   {
@@ -297,9 +286,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offensive_feat_pickle = 'raw_offensive_features.pickle'\n",
-    "offensive_features = qu.get_all_offensive_features(data_locs / offensive_feat_pickle)"
+    "# Acquire all the batters from the database.\n",
+    "batters_pickle = 'game_players.pickle'\n",
+    "all_batters = qu_vTwo.get_batters(data_locs / batters_pickle)\n",
+    "for game_id in all_batters:\n",
+    "    print(game_id)\n",
+    "    for i, event in enumerate(all_batters[game_id]):\n",
+    "        print(event)\n",
+    "        if i > 6: break\n",
+    "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Acquire all the batters features from the database.\n",
+    "offensive_feat_pickle = 'raw_offensive_features.pickle'\n",
+    "offensive_features = qu_vTwo.get_all_offensive_features(data_locs / offensive_feat_pickle)\n",
+    "for player_id in offensive_features:\n",
+    "    print(player_id)\n",
+    "    for i, game in enumerate(offensive_features[player_id]):\n",
+    "        print(game)\n",
+    "        if i > 1: break\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
