New: Added Started Pitchers Features and Starting Batters Features in Version 2

--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,50 +44,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[('ATL199004150', 1990, 15, 4, 6, 13, 'ATL', 'CIN', 1),\n ('CAL199004150', 1990, 15, 4, 4, 1, 'CAL', 'MIN', 0),\n ('CHA199004150', 1990, 15, 4, 4, 1, 'CHA', 'CLE', 0),\n ('DET199004150', 1990, 15, 4, 6, 4, 'DET', 'BAL', 0),\n ('HOU199004150', 1990, 15, 4, 4, 5, 'HOU', 'LAN', 1)]"
+      "text/plain": "[('LAN199005020', 1990, 2, 5, 6, 2, 'LAN', 'PIT', 0),\n ('MON199005020', 1990, 2, 5, 1, 8, 'MON', 'ATL', 1),\n ('NYA199005020', 1990, 2, 5, 0, 2, 'NYA', 'OAK', 1),\n ('NYN199005020', 1990, 2, 5, 5, 0, 'NYN', 'CIN', 0),\n ('PHI199005020', 1990, 2, 5, 14, 4, 'PHI', 'HOU', 0)]"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ],
    "source": [
     "# Get all the game ids with the relevent information attributed to those id. Ensure to get games past May 15.\n",
     "# The games are returned from earliest played to most recent.\n",
     "game_outcomes = qu_vTwo.get_game_outcomes(day=15, month=5)            \n",
+    "game_outcomes = game_outcomes[200:]\n",
     "game_outcomes[0:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[['LAN199005020', 0],\n ['MON199005020', 1],\n ['NYA199005020', 1],\n ['NYN199005020', 0]]"
-     },
-     "metadata": {},
-     "execution_count": 13
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "An Event ['langm001', '0ANA199704020']\nNum Events 46\nNum Games 162\nNum Years 23\nNum Teams 33\n"
     }
    ],
-   "source": [
-    "# Retrieve only the game ids and their outcomes for modelling purposes. In addition, remove the first 200 games from the model to incur some historic data.\n",
-    "game_ids = [[game_id[0], game_id[8]] for game_id in game_outcomes[200:]]\n",
-    "game_ids[:4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Fetch the players, pitchers, and offensive features from all the games.\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
@@ -97,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -237,7 +224,13 @@
      "outputPrepend"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "The number of relievers to contian: 3\nGames accounted for: 69649\nANA199704020\n{'ANA': ['may-d002', 'perct001', 'jamem001'], 'BOS': ['henrb001', 'mahop001', 'sloch001']}\n"
+    }
+   ],
    "source": [
     "# Gather all the relief pitchers. -- POSSIBLE EXCEPTION (NOT ALL GAMES INCLUDED, GAMES MAY BE MISSING DUE TO COMPLETE GAMES)\n",
     "relief_pitchers = qu_vTwo.get_relief_pitchers(all_pitcher, 25)\n",
@@ -250,9 +243,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Games accounted for: 70101\nANA199704020\n{'ANA': 'langm001', 'BOS': 'gordt001'}\n"
+    }
+   ],
    "source": [
     "# Gather all the starting pitchers.\n",
     "starting_pitchers = qu_vTwo.get_starting_pitchers(all_pitcher)\n",
@@ -265,9 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "ackej001\n['TEX199004090', 1.0, 2.0202, 0.0]\n['TOR199004120', 1.5, 1.26135, 0.0]\n['KCA199004150', 1.3333, 2.8611, 0.6667]\n"
+    }
+   ],
    "source": [
     "# Gather all the pitching features from the database.\n",
     "pitching_feat_pickle = 'raw_pitching_features.pickle'\n",
@@ -282,9 +287,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "ANA199704020\n['garcn001', 0, '0ANA199704020']\n['pembr001', 0, '10ANA199704020']\n['haseb001', 0, '11ANA199704020']\n['macks001', 0, '12ANA199704020']\n['holld001', 1, '13ANA199704020']\n['andeg001', 1, '14ANA199704020']\n['murre001', 1, '15ANA199704020']\n['leyrj001', 1, '16ANA199704020']\n"
+    }
+   ],
    "source": [
     "# Acquire all the batters from the database.\n",
     "batters_pickle = 'game_players.pickle'\n",
@@ -299,9 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "bainh001\n['TEX199004090', 0.25, 1.0]\n['TOR199004100', 0.25, 0.625]\n['TOR199004110', 0.5, 0.625]\n"
+    }
+   ],
    "source": [
     "# Acquire all the batters features from the database.\n",
     "offensive_feat_pickle = 'raw_offensive_features.pickle'\n",
@@ -319,11 +336,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Given all the games and player features, consolidate everything into one list.\n",
+    "features_pickle = 'game_features.pickle'\n",
+    "game_features = []\n",
+    "for game in game_outcomes:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -477,10 +499,72 @@
      "outputPrepend"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[4.5, 1.01, 1.75]\n3\n"
+    }
+   ],
    "source": [
     "# Gather all the features from every game.\n",
-    "features_pickle = 'game_features.pickle'\n",
+    "from BaseballAnalytics.bin.app_utils.consolidation.consolidating_features import Feature_Consolidater as fc\n",
+    "\n",
+    "def get_pitchers_features(pitching_features, player_id, game_id):\n",
+    "\n",
+    "    # Function Description: Retrieve the features of a given player prior to entering the new game. The features are available from the previous game.\n",
+    "    # Function Parameters: pitching_features (The pitching features used to indicate the pitchers performance.)\n",
+    "    #    player_id (The player id associated in which we wish to retrieve the data.), game_id (The game id needed to look backwards.)\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: A list containing the offensive features. The amount of features was determined in previous queries but does not matter in this function.\n",
+    "    #    If the player does not have much data, I will be returning -1 to signal the prescence of a new player.\n",
+    "\n",
+    "    player_stats = pitching_features[player_id]\n",
+    "    if len(player_stats) < 3:                          # Not enough games played to create reasonable stats.\n",
+    "        return [-1, -1, -1]\n",
+    "    for idx, games in enumerate(player_stats):\n",
+    "        if games[0] == game_id:                        # NOTE: Can this be optimised with using numpy arrays?\n",
+    "            return player_stats[idx - 1][1:]           # Return the stats from the day before. Should we particularily focus on a seaosn? Should things get a rest?\n",
+    "\n",
+    "def sub_pitching_features(pitching_features, pitchers, game_id):\n",
+    "\n",
+    "    # Function Description: Substitute the pitcher ids provided with the pitching features. The features will be returned in the same order the names are provided.\n",
+    "    # Function Parameters: pitching_features (The pitching features used to indicate the pitchers performance.),\n",
+    "    #    pitchers (The player ids we wish to retrieve the data for.), game_id (The game id needed to look backwards.) \n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: A complete list of the featues to be inputted into the model. The list will vary depending on the number of players and features for each player.\n",
+    "\n",
+    "    pitcher_features = []\n",
+    "    for pitcher in pitchers:\n",
+    "        pitcher_features += get_pitchers_features(pitching_features, pitcher, game_id)\n",
+    "    return [float(feat) for feat in pitcher_features]\n",
+    "\n",
+    "def get_game_features(all_batters, offensive_features, starting_pitchers, relief_pitchers, pitching_features, game_stats):\n",
+    "\n",
+    "    # Function Description: Get all the features for a given game id. This involves getting the players who played in the game and then retrieving their associated features.\n",
+    "    # Function Parameters: all_batters (All of the batters information.) all_pitcher (All of the pitchers information.), \n",
+    "    #     offensive_features (All of the offensive features that are used to predict outcome.), \n",
+    "    #     game_id (The game id used to acquire the player features.)\n",
+    "    # Function Throws: ValueError (Thrown when the incorrect number of features are returned.)\n",
+    "    # Function Returns: A single list containing the features of the game.\n",
+    "\n",
+    "    game_features = []\n",
+    "    home_players = []\n",
+    "    vis_players = []\n",
+    "    # Acquire Home Stats\n",
+    "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[6])], game_stats[0])       # The location of the home team within the games list.\n",
+    " ##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 1), game_id)\n",
+    "    # Acquire Away Stats\n",
+    "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[7])], game_stats[0])\n",
+    " ##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 0), game_id)\n",
+    "    #if len(game_features) != 60: raise ValueError(\"The correct number of features was not returned.\")\n",
+    "    return game_features\n",
+    "\n",
+    "for game_stats in game_outcomes:\n",
+    "    a = get_game_features(all_batters, offensive_features, starting_pitchers, relief_pitchers, pitching_features, game_stats)\n",
+    "    print(a)\n",
+    "    print(len(a))\n",
+    "    break\n",
     "#lh = Log_Helper()\n",
     "#all_features = {}\n",
     "#num_games = len(game_ids)\n",
@@ -493,7 +577,7 @@
     "#    lh.print_progress_bar(num + 1, num_games, prefix = 'Progress:', suffix = 'Complete', length = 50)\n",
     "#with open(data_locs / features_pickle, 'wb') as f:\n",
     "#    dump(all_features, f)\n",
-    "with open(data_locs / features_pickle, 'rb') as f: all_features = load(f)"
+    "#with open(data_locs / features_pickle, 'rb') as f: all_features = load(f)"
    ]
   },
   {
