In Progress: Adding ability to get relief pitchers

--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -78,8 +78,8 @@
    "source": [
     "# Fetch the players, pitchers, and offensive features from all the games.\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
-    "all_pitcher = qu_vTwo.get_pitchers_in_all_games(data_locs / pitchers_pickle)\n",
-    "qu_vTwo.unpack_pitchers(all_pitcher)"
+    "all_pitchers = qu_vTwo.get_pitchers_in_all_games(data_locs / pitchers_pickle)\n",
+    "qu_vTwo.unpack_pitchers(all_pitchers)"
    ]
   },
   {
@@ -254,7 +254,7 @@
    ],
    "source": [
     "# Gather all the starting pitchers.\n",
-    "starting_pitchers = qu_vTwo.get_starting_pitchers(all_pitcher)\n",
+    "starting_pitchers = qu_vTwo.get_starting_pitchers(all_pitchers)\n",
     "print(\"Games accounted for: {}\".format(len(starting_pitchers)))\n",
     "for game in starting_pitchers:\n",
     "    print(game)\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -503,12 +503,32 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[4.5, 1.01, 1.75]\n3\n"
+     "text": "[]\n0\n"
     }
    ],
    "source": [
     "# Gather all the features from every game.\n",
     "from BaseballAnalytics.bin.app_utils.consolidation.consolidating_features import Feature_Consolidater as fc\n",
+    "\n",
+    "def get_relief_pitchers(all_pitchers, relief_pitchers, game_id, pitcher_team, year):\n",
+    "\n",
+    "    # Function Description: Extract the relief pitchers within the game.\n",
+    "    # Function Parameters: all_pitchers (The dictionary containing all the games in which every pitcher participated.)\n",
+    "    #    relief_pitchers (The dictionary containing all the games with their relievers.), \n",
+    "    #    game_id (The game id you wish to extract the batting lineup.), pitcher_team (The team of the pitcher who plays on the team.)\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: A list containing the relief pitcher.\n",
+    "\n",
+    "    try:\n",
+    "        return relief_pitchers[game_id][pitcher_team]\n",
+    "    except KeyError:                                    # We would incur this error if the game is not found in the dictionary which is an anticipation of mine.\n",
+    "        season_games = [game_id_backup for game_id_backup in all_pitchers[pitcher_team][year]]       # Get all the games in the season.\n",
+    "        for id in season_games:                                                                      # Attempt to find a game within the season and use that starting pitcher.\n",
+    "            try:\n",
+    "                return relief_pitchers[game_id][pitcher_team]\n",
+    "            except KeyError: \n",
+    "                pass\n",
+    "        raise KeyError(\"We were unable to find relief pitchers for this game.\")                      # If we get here, throw an error.\n",
     "\n",
     "def get_pitchers_features(pitching_features, player_id, game_id):\n",
     "\n",
@@ -539,12 +559,13 @@
     "        pitcher_features += get_pitchers_features(pitching_features, pitcher, game_id)\n",
     "    return [float(feat) for feat in pitcher_features]\n",
     "\n",
-    "def get_game_features(all_batters, offensive_features, starting_pitchers, relief_pitchers, pitching_features, game_stats):\n",
+    "def get_game_features(all_batters, offensive_features, all_pitchers, starting_pitchers, relief_pitchers, pitching_features, game_stats):\n",
     "\n",
     "    # Function Description: Get all the features for a given game id. This involves getting the players who played in the game and then retrieving their associated features.\n",
-    "    # Function Parameters: all_batters (All of the batters information.) all_pitcher (All of the pitchers information.), \n",
-    "    #     offensive_features (All of the offensive features that are used to predict outcome.), \n",
-    "    #     game_id (The game id used to acquire the player features.)\n",
+    "    # Function Parameters: all_batters (All of the batters information.) all_pitcher (All of the pitchers information.),\n",
+    "    #    all_pitchers (The dictionary containing all the pitchers who participated in every game.),\n",
+    "    #    offensive_features (All of the offensive features that are used to predict outcome.), \n",
+    "    #    game_id (The game id used to acquire the player features.)\n",
     "    # Function Throws: ValueError (Thrown when the incorrect number of features are returned.)\n",
     "    # Function Returns: A single list containing the features of the game.\n",
     "\n",
@@ -554,14 +575,17 @@
     "    # Acquire Home Stats\n",
     "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[6])], game_stats[0])       # The location of the home team within the games list.\n",
     " ##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 1), game_id)\n",
+    "    get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1])\n",
+    "    #game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\n",
     "    # Acquire Away Stats\n",
     "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[7])], game_stats[0])\n",
     " ##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 0), game_id)\n",
+    "   # game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[7], game_stats[1]), game_stats[0], all_pitchers)\n",
     "    #if len(game_features) != 60: raise ValueError(\"The correct number of features was not returned.\")\n",
     "    return game_features\n",
     "\n",
     "for game_stats in game_outcomes:\n",
-    "    a = get_game_features(all_batters, offensive_features, starting_pitchers, relief_pitchers, pitching_features, game_stats)\n",
+    "    a = get_game_features(all_batters, offensive_features, all_pitchers, starting_pitchers, relief_pitchers, pitching_features, game_stats)\n",
     "    print(a)\n",
     "    print(len(a))\n",
     "    break\n",
@@ -579,6 +603,13 @@
     "#    dump(all_features, f)\n",
     "#with open(data_locs / features_pickle, 'rb') as f: all_features = load(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
