--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -503,7 +503,20 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[]\n0\n"
+     "text": "['crewt001', 'aased001', 'hartm002']\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-67-e6318e93f996>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mgame_stats\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mgame_outcomes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_game_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_batters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moffensive_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mall_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstarting_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelief_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-67-e6318e93f996>\u001b[0m in \u001b[0;36mget_game_features\u001b[1;34m(all_batters, offensive_features, all_pitchers, starting_pitchers, relief_pitchers, pitching_features, game_stats)\u001b[0m\n\u001b[0;32m     70\u001b[0m  \u001b[1;31m##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 1), game_id)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_relief_pitchers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelief_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m     \u001b[0mgame_features\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0msub_pitching_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mget_relief_pitchers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelief_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m     \u001b[1;31m#game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m     \u001b[1;31m# Acquire Away Stats\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-67-e6318e93f996>\u001b[0m in \u001b[0;36msub_pitching_features\u001b[1;34m(pitching_features, pitchers, game_id)\u001b[0m\n\u001b[0;32m     50\u001b[0m     \u001b[0mpitcher_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mpitcher\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpitchers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m         \u001b[0mpitcher_features\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mget_pitchers_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpitcher\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     53\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeat\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfeat\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpitcher_features\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
     }
    ],
    "source": [
@@ -525,7 +538,7 @@
     "        season_games = [game_id_backup for game_id_backup in all_pitchers[pitcher_team][year]]       # Get all the games in the season.\n",
     "        for id in season_games:                                                                      # Attempt to find a game within the season and use that starting pitcher.\n",
     "            try:\n",
-    "                return relief_pitchers[game_id][pitcher_team]\n",
+    "                return relief_pitchers[id][pitcher_team]\n",
     "            except KeyError: \n",
     "                pass\n",
     "        raise KeyError(\"We were unable to find relief pitchers for this game.\")                      # If we get here, throw an error.\n",
@@ -575,7 +588,8 @@
     "    # Acquire Home Stats\n",
     "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[6])], game_stats[0])       # The location of the home team within the games list.\n",
     " ##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 1), game_id)\n",
-    "    get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1])\n",
+    "    print(get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]))\n",
+    "    game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\n",
     "    #game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\n",
     "    # Acquire Away Stats\n",
     "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[7])], game_stats[0])\n",
@@ -606,10 +620,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "IM SORRY\nANA\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['may-d002', 'perct001', 'jamem001']"
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
+   "source": [
+    "get_relief_pitchers(all_pitchers, relief_pitchers, 'IM SORRY', 'ANA', 1997)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['may-d002', 'perct001', 'jamem001']"
+     },
+     "metadata": {},
+     "execution_count": 64
+    }
+   ],
+   "source": [
+    "relief_pitchers['ANA199704020']['ANA']"
+   ]
   },
   {
    "cell_type": "code",
