--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 76,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -503,20 +503,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "['crewt001', 'aased001', 'hartm002']\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-67-e6318e93f996>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mgame_stats\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mgame_outcomes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_game_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_batters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moffensive_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mall_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstarting_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelief_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-67-e6318e93f996>\u001b[0m in \u001b[0;36mget_game_features\u001b[1;34m(all_batters, offensive_features, all_pitchers, starting_pitchers, relief_pitchers, pitching_features, game_stats)\u001b[0m\n\u001b[0;32m     70\u001b[0m  \u001b[1;31m##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 1), game_id)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_relief_pitchers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelief_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m     \u001b[0mgame_features\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0msub_pitching_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mget_relief_pitchers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrelief_pitchers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_stats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m     \u001b[1;31m#game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m     \u001b[1;31m# Acquire Away Stats\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-67-e6318e93f996>\u001b[0m in \u001b[0;36msub_pitching_features\u001b[1;34m(pitching_features, pitchers, game_id)\u001b[0m\n\u001b[0;32m     50\u001b[0m     \u001b[0mpitcher_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mpitcher\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpitchers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m         \u001b[0mpitcher_features\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mget_pitchers_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitching_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpitcher\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     53\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeat\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfeat\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpitcher_features\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
-     ]
+     "text": "LAN199005020\n['crewt001', 'aased001', 'hartm002']\n[-1, -1, -1]\n[-1, -1, -1]\n[-1, -1, -1]\n[-1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0]\n9\n"
     }
    ],
    "source": [
@@ -525,12 +512,12 @@
     "\n",
     "def get_relief_pitchers(all_pitchers, relief_pitchers, game_id, pitcher_team, year):\n",
     "\n",
-    "    # Function Description: Extract the relief pitchers within the game.\n",
+    "    \"\"\"# Function Description: Extract the relief pitchers within the game.\n",
     "    # Function Parameters: all_pitchers (The dictionary containing all the games in which every pitcher participated.)\n",
     "    #    relief_pitchers (The dictionary containing all the games with their relievers.), \n",
     "    #    game_id (The game id you wish to extract the batting lineup.), pitcher_team (The team of the pitcher who plays on the team.)\n",
     "    # Function Throws: Nothing\n",
-    "    # Function Returns: A list containing the relief pitcher.\n",
+    "    # Function Returns: A list containing the relief pitcher.\"\"\"\n",
     "\n",
     "    try:\n",
     "        return relief_pitchers[game_id][pitcher_team]\n",
@@ -545,12 +532,12 @@
     "\n",
     "def get_pitchers_features(pitching_features, player_id, game_id):\n",
     "\n",
-    "    # Function Description: Retrieve the features of a given player prior to entering the new game. The features are available from the previous game.\n",
+    "    \"\"\"# Function Description: Retrieve the features of a given player prior to entering the new game. The features are available from the previous game.\n",
     "    # Function Parameters: pitching_features (The pitching features used to indicate the pitchers performance.)\n",
     "    #    player_id (The player id associated in which we wish to retrieve the data.), game_id (The game id needed to look backwards.)\n",
     "    # Function Throws: Nothing\n",
     "    # Function Returns: A list containing the offensive features. The amount of features was determined in previous queries but does not matter in this function.\n",
-    "    #    If the player does not have much data, I will be returning -1 to signal the prescence of a new player.\n",
+    "    #    If the player does not have much data, I will be returning -1 to signal the prescence of a new player.\"\"\"\n",
     "\n",
     "    player_stats = pitching_features[player_id]\n",
     "    if len(player_stats) < 3:                          # Not enough games played to create reasonable stats.\n",
@@ -559,13 +546,46 @@
     "        if games[0] == game_id:                        # NOTE: Can this be optimised with using numpy arrays?\n",
     "            return player_stats[idx - 1][1:]           # Return the stats from the day before. Should we particularily focus on a seaosn? Should things get a rest?\n",
     "\n",
-    "def sub_pitching_features(pitching_features, pitchers, game_id):\n",
+    "def get_relief_pitchers_features(pitching_features, pitcher_ids, game_id):\n",
     "\n",
-    "    # Function Description: Substitute the pitcher ids provided with the pitching features. The features will be returned in the same order the names are provided.\n",
+    "    \"\"\"# Function Description: Given the current architecture, the game id provided by the client may not be in the list of game ids provided.KeyError\n",
+    "    #    To handle this problem, I will return the previous game id that is one date before the current game id.\n",
+    "    # Function Parameters: #    all_pitchers (The dictionary containing all the pitchers who participated in every game.),\n",
+    "    #    pitcher_Id (The pitcher id you wish to extract the information from.), \n",
+    "    #    game_id (The game id you wish to get the features from.)\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: The list of features for the pitcher.\"\"\"\n",
+    "\n",
+    "    if player_id not in pitching_features:\n",
+    "        return [-1, -1, -1]\n",
+    "    player_stats = pitching_features[player_id]        # NOTE: Can this be optimised with using numpy arrays?\n",
+    "    if len(player_stats) < 3:                          # Not enough games played to create reasonable stats.\n",
+    "         return [-1, -1, -1]\n",
+    "    for idx, games in enumerate(player_stats):\n",
+    "        if games[0][3:-1] > game_id[0][3:-1]:          # Return when the game date is greater than the current game. (This means we are in the future.)\n",
+    "            return player_stats[idx - 1][1:]           # Return the stats from the day before. Should we particularily focus on a seaosn? Should things get a rest?\n",
+    "\n",
+    "def sub_relief_pitching_features(pitching_features, pitchers, game_id):\n",
+    "\n",
+    "    \"\"\"# Function Description: Substitute the pitcher ids provided with the pitching features. The features will be returned in the same order the names are provided.\n",
     "    # Function Parameters: pitching_features (The pitching features used to indicate the pitchers performance.),\n",
     "    #    pitchers (The player ids we wish to retrieve the data for.), game_id (The game id needed to look backwards.) \n",
     "    # Function Throws: Nothing\n",
-    "    # Function Returns: A complete list of the featues to be inputted into the model. The list will vary depending on the number of players and features for each player.\n",
+    "    # Function Returns: A complete list of the featues to be inputted into the model. The list will vary depending on the number of players and features for each player.\"\"\"\n",
+    "\n",
+    "    pitcher_features = []\n",
+    "    for pitcher in pitchers:\n",
+    "        print(get_relief_pitchers_features(pitching_features, pitcher, game_id))\n",
+    "        pitcher_features += get_relief_pitchers_features(pitching_features, pitcher, game_id)\n",
+    "    return [float(feat) for feat in pitcher_features]\n",
+    "\n",
+    "def sub_pitching_features(pitching_features, pitchers, game_id):\n",
+    "\n",
+    "    \"\"\"# Function Description: Substitute the pitcher ids provided with the pitching features. The features will be returned in the same order the names are provided.\n",
+    "    # Function Parameters: pitching_features (The pitching features used to indicate the pitchers performance.),\n",
+    "    #    pitchers (The player ids we wish to retrieve the data for.), game_id (The game id needed to look backwards.) \n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: A complete list of the featues to be inputted into the model. The list will vary depending on the number of players and features for each player.\"\"\"\n",
     "\n",
     "    pitcher_features = []\n",
     "    for pitcher in pitchers:\n",
@@ -574,13 +594,16 @@
     "\n",
     "def get_game_features(all_batters, offensive_features, all_pitchers, starting_pitchers, relief_pitchers, pitching_features, game_stats):\n",
     "\n",
-    "    # Function Description: Get all the features for a given game id. This involves getting the players who played in the game and then retrieving their associated features.\n",
-    "    # Function Parameters: all_batters (All of the batters information.) all_pitcher (All of the pitchers information.),\n",
-    "    #    all_pitchers (The dictionary containing all the pitchers who participated in every game.),\n",
+    "    \"\"\"# Function Description: Get all the features for a given game id. This involves getting the players who played in the game and then retrieving their associated features.\n",
+    "    # Function Parameters: all_batters (All of the batters information.), \n",
     "    #    offensive_features (All of the offensive features that are used to predict outcome.), \n",
-    "    #    game_id (The game id used to acquire the player features.)\n",
+    "    #    all_pitchers (The dictionary containing all the pitchers who participated in every game.),\n",
+    "    #    starting_pitchers (The starting pitchers in all the games.), \n",
+    "    #    relief_pitchers (The relief pitchers in all the games.), \n",
+    "    #    pitching_features (The pitching features in all the games. (Both relievers and starters.)),\n",
+    "    #    game_stats (The game id with all pertinent information.)\n",
     "    # Function Throws: ValueError (Thrown when the incorrect number of features are returned.)\n",
-    "    # Function Returns: A single list containing the features of the game.\n",
+    "    # Function Returns: A single list containing the features of the game.\"\"\"\n",
     "\n",
     "    game_features = []\n",
     "    home_players = []\n",
@@ -588,8 +611,9 @@
     "    # Acquire Home Stats\n",
     "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[6])], game_stats[0])       # The location of the home team within the games list.\n",
     " ##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 1), game_id)\n",
+    "    print(game_stats[0])\n",
     "    print(get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]))\n",
-    "    game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\n",
+    "    game_features += sub_relief_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\n",
     "    #game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\n",
     "    # Acquire Away Stats\n",
     "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[7])], game_stats[0])\n",
@@ -620,43 +644,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "IM SORRY\nANA\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "['may-d002', 'perct001', 'jamem001']"
-     },
-     "metadata": {},
-     "execution_count": 68
+     "output_type": "error",
+     "ename": "KeyError",
+     "evalue": "'bainh001'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-71-df09e83bfadf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpitching_features\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'bainh001'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 'bainh001'"
+     ]
     }
    ],
    "source": [
-    "get_relief_pitchers(all_pitchers, relief_pitchers, 'IM SORRY', 'ANA', 1997)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "['may-d002', 'perct001', 'jamem001']"
-     },
-     "metadata": {},
-     "execution_count": 64
-    }
-   ],
-   "source": [
-    "relief_pitchers['ANA199704020']['ANA']"
+    "pitching_features['bainh001']"
    ]
   },
   {
