--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -503,7 +503,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "LAN199005020\n['crewt001', 'aased001', 'hartm002']\n[-1, -1, -1]\n[-1, -1, -1]\n[-1, -1, -1]\n[-1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0]\n9\n"
+     "text": "1  crewt001\n1  aased001\n1  hartm002\n[1.0, 1.74785, 1.6, 0.8, 2.27513, 1.3, -1.0, -1.0, -1.0]\n9\n"
     }
    ],
    "source": [
@@ -546,7 +546,7 @@
     "        if games[0] == game_id:                        # NOTE: Can this be optimised with using numpy arrays?\n",
     "            return player_stats[idx - 1][1:]           # Return the stats from the day before. Should we particularily focus on a seaosn? Should things get a rest?\n",
     "\n",
-    "def get_relief_pitchers_features(pitching_features, pitcher_ids, game_id):\n",
+    "def get_relief_pitchers_features(pitching_features, pitcher_id, game_id):\n",
     "\n",
     "    \"\"\"# Function Description: Given the current architecture, the game id provided by the client may not be in the list of game ids provided.KeyError\n",
     "    #    To handle this problem, I will return the previous game id that is one date before the current game id.\n",
@@ -556,9 +556,9 @@
     "    # Function Throws: Nothing\n",
     "    # Function Returns: The list of features for the pitcher.\"\"\"\n",
     "\n",
-    "    if player_id not in pitching_features:\n",
+    "    if pitcher_id not in pitching_features:\n",
     "        return [-1, -1, -1]\n",
-    "    player_stats = pitching_features[player_id]        # NOTE: Can this be optimised with using numpy arrays?\n",
+    "    player_stats = pitching_features[pitcher_id]       # NOTE: Can this be optimised with using numpy arrays?\n",
     "    if len(player_stats) < 3:                          # Not enough games played to create reasonable stats.\n",
     "         return [-1, -1, -1]\n",
     "    for idx, games in enumerate(player_stats):\n",
@@ -575,7 +575,7 @@
     "\n",
     "    pitcher_features = []\n",
     "    for pitcher in pitchers:\n",
-    "        print(get_relief_pitchers_features(pitching_features, pitcher, game_id))\n",
+    "        print(\"1  \" + pitcher)\n",
     "        pitcher_features += get_relief_pitchers_features(pitching_features, pitcher, game_id)\n",
     "    return [float(feat) for feat in pitcher_features]\n",
     "\n",
@@ -611,8 +611,9 @@
     "    # Acquire Home Stats\n",
     "    #game_features += sub_pitching_features(pitching_features, [fc.get_starting_pitcher(starting_pitchers, game_stats[0], game_stats[6])], game_stats[0])       # The location of the home team within the games list.\n",
     " ##   game_features += fc.sub_offensive_features(offensive_features, fc.get_starting_batters(all_batters, game_id, 1), game_id)\n",
-    "    print(game_stats[0])\n",
-    "    print(get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]))\n",
+    "    #print(game_stats[0])\n",
+    "    #print(get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]))\n",
+    "   # print(get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]))\n",
     "    game_features += sub_relief_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\n",
     "    #game_features += sub_pitching_features(pitching_features, get_relief_pitchers(all_pitchers, relief_pitchers, game_stats[0], game_stats[6], game_stats[1]), game_stats[0])\n",
     "    # Acquire Away Stats\n",
@@ -644,23 +645,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
      "ename": "KeyError",
-     "evalue": "'bainh001'",
+     "evalue": "'hartm002'",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-71-df09e83bfadf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpitching_features\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'bainh001'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: 'bainh001'"
+      "\u001b[1;32m<ipython-input-87-9f4f7881f263>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitching_features\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'hartm002'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'hartm002'"
      ]
     }
    ],
    "source": [
-    "pitching_features['bainh001']"
+    "for i, j in enumerate(pitching_features['hartm002']):\n",
+    "    print(j)\n",
+    "    if i > 2: break"
    ]
   },
   {
